# Chip8

./: CMakeLists.txt  IReader.cpp  IReader.hpp  Makefile  chip8.cpp  chip8.h  chip8.hpp  main.cpp  view.cpp  view.h
test/: test.cpp
